--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
 <body>
     <header></header>
     <main>
+        
         <div id="content">
             <!-- Display NASA API content here -->
         </div>
 
+        <div id="content2">
+
+        </div>
     </main>
     <script src="script.js"></script>
+    
 </body>
 </html>
