--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
             <label for="categorySelect">Escolha uma categoria:</label>
             <select id="categorySelect">
               <option value="all">Todas</option>
-              <option value="sun">Sol</option>
-              <option value="galaxy">Galáxias</option>
+              <option value="sun">sun</option>
+              <option value="galaxy">galaxy</option>
+              <option value="moon">moon</option>
+              <option value="moon">eclipse</option>
+              <option value="spacecraft">spacecraft</option>
               <!-- Adicione outras opções de categorias conforme necessário -->
             </select>
             <button onclick="performSearch2()">Filtrar</button>
