update links hrefs

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <div class="menu">
             <ul class="menulist">
                 <li>
-                    <a href="#intro">
+                    <a href="#APOD">
                         <h4>Image of the day</h4>
                     </a>
                 </li>
                 <li>
-                    <a href="#about">
+                    <a href="#Latest">
                         <h4>Latest 6</h4>
                     </a>
                 </li>
-                <li><a href="#Contacts">
+                <li><a href="#Discover">
                         <h4>Discover</h4>
                     </a></li>
             </ul>
