--- a/index.html
+++ b/index.html
@@ -17,34 +17,39 @@
 
 <body>
     <header>
-        <p>swipe up ↑</p>
-        <div id="logo">
-            <img src="conteudo/NasaDiscovery.svg" alt="logo website">
-        </div>
-        <div class="menu">
-            <ul class="menulist">
-                <li>
-                    <a href="#APOD">
-                        <h4>Image of the day</h4>
-                    </a>
-                </li>
-                <li>
-                    <a href="#Latest">
-                        <h4>Latest 6</h4>
-                    </a>
-                </li>
-                <li><a href="#Discover">
-                        <h4>Discover</h4>
-                    </a></li>
-            </ul>
-        </div>
+
+        <nav>
+            <div class="logo2">
+                <img class="logo" src="conteudo/NasaDiscovery.svg" alt="logo website">
+            </div>
+            <div class="menu">
+                <ul class="menulist">
+                    <li>
+                        <a href="#APOD">
+                            <h4>Image of the day</h4>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Latest">
+                            <h4>Latest 6</h4>
+                        </a>
+                    </li>
+                    <li><a href="#Discover">
+                            <h4>Discover</h4>
+                        </a></li>
+                </ul>
+            </div>
+            <hr />
+        </nav>
     </header>
     <main>
+        <div id="apod">
+            <!--Imagem do dia-->
+        </div>
+
 
         <div id="content">
-            <!-- Display NASA API content here -->
-        </div>
-        <div id="content2">
+            <!-- Uma imagem random para o header-->
         </div>
 
 
