--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,10 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            img{
+                width:50%;
+                
+            }
         }
 
         .apod-image {
