--- a/index.html
+++ b/index.html
@@ -46,19 +46,14 @@
             </div>
             <hr />
         </nav>
+        <div id="headerimg"></div>
     </header>
     <main>
-        <div id="content">
-            <!-- Uma imagem random para o header-->
-            <div id="content"> </div>
-           
-        </div>
-
         <div id="APOD">
+            <div id="size"></div>
             <h2>Image of the day</h2>
             <!--Imagem do dia-->
             <div id="contentapod"></div>
-            
         </div>
 
         <div id="Latest">
