--- a/teste.html
+++ b/teste.html
@@ -9,11 +9,10 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+        }
 
-            img {
-                width: 50%;
-
-            }
+        img {
+            width: 50%;
         }
 
         .apod-image {
@@ -56,6 +55,14 @@
         <option value="Scientists">Scientists</option>
         <option value="Astronauts">Astronauts</option>
     </select>
+
+    <label for="orderBy">Order By:</label>
+    <select id="orderBy" onchange="applyOrderBy(this.value);">
+        <option value="random">Random</option>
+        <option value="latest">Most recent to old</option>
+        <option value="oldest">Oldest to most recent</option>
+    </select>
+
     <button onclick="resetFilter()">Reset Filter</button>
     <div id="apod-container"></div>
 
@@ -98,21 +105,18 @@
         // Função para renderizar uma única imagem APOD
         function renderApodImage(apodData) {
             const { title, date, explanation, url } = apodData;
-
             // Limite de caracteres para mostrar inicialmente
             const initialCharLimit = 270;
-
             // Verifica se a explicação excede o limite de caracteres
             const showSeeMore = explanation.length > initialCharLimit;
-
             // Obtém a parte inicial ou completa da explicação
             const truncatedExplanation = showSeeMore ? explanation.slice(0, initialCharLimit) + '...' : explanation;
 
             const apodImageHTML = `
-                <div class="apod-image">
-                    <h3>${title}</h3>
-                    <p>Date: ${date}</p>
-                    <img src="${url}" alt="${title}" style="max-width: 100%;">
+                <div class="discoverapodlist">
+                    <h3 class="titlediscoverlist" >${title}</h3>
+                    <p class="datediscoverlist">Date: ${date}</p>
+                    <img src="${url}" alt="${title}" style="max-width: 100%;" class="imagediscoverlist">
                     <p class="explanation-disc">${truncatedExplanation}</p>
                     ${showSeeMore ? '<button onclick="toggleExplanation(this)">See More</button>' : ''}
                 </div>
@@ -121,28 +125,26 @@
             apodContainer.innerHTML += apodImageHTML;
         }
 
-// Função para exibir a explicação completa ou reduzir ao clicar no botão
-function toggleExplanation(button) {
-    const apodImageDiv = button.parentElement;
-    const apodData = allApodImages.find(apod => apod.title === apodImageDiv.querySelector('h3').innerText);
+        // Função para exibir a explicação completa ou reduzir ao clicar no botão
+        function toggleExplanation(button) {
+            const apodImageDiv = button.parentElement;
+            const apodData = allApodImages.find(apod => apod.title === apodImageDiv.querySelector('h3').innerText);
 
-    if (apodData) {
-        const fullExplanation = apodData.explanation;
-        const existingExplanation = apodImageDiv.querySelector('.explanation-disc').innerHTML;
+            if (apodData) {
+                const fullExplanation = apodData.explanation;
+                const existingExplanation = apodImageDiv.querySelector('.explanation-disc').innerHTML;
 
-        // Se o texto estiver expandido, reduz para os 270 caracteres iniciais
-        if (button.innerText === 'See Less') {
-            const truncatedExplanation = fullExplanation.substring(0, 270) + '...';
-            apodImageDiv.querySelector('.explanation-disc').innerHTML = truncatedExplanation;
-            button.innerText = 'See More';
-        } else {  // Se o texto não estiver expandido, exibe a explicação completa
-            apodImageDiv.querySelector('.explanation-disc').innerHTML = fullExplanation;
-            button.innerText = 'See Less';
+                // Se o texto estiver expandido, reduz para os 270 caracteres iniciais
+                if (button.innerText === 'See Less') {
+                    const truncatedExplanation = fullExplanation.substring(0, 270) + '...';
+                    apodImageDiv.querySelector('.explanation-disc').innerHTML = truncatedExplanation;
+                    button.innerText = 'See More';
+                } else {  // Se o texto não estiver expandido, exibe a explicação completa
+                    apodImageDiv.querySelector('.explanation-disc').innerHTML = fullExplanation;
+                    button.innerText = 'See Less';
+                }
+            }
         }
-    }
-}
-
-
 
         // Função para aplicar o filtro com base na categoria
         function applyCategoryFilter(category) {
@@ -154,6 +156,25 @@ function toggleExplanation(button) {
             });
 
             renderApodImages(filteredImages);
+        }
+
+        // Função para aplicar a ordenação dos resultados
+        function applyOrderBy(orderBy) {
+            let sortedImages = [...allApodImages];
+
+            switch (orderBy) {
+                case 'latest':
+                    sortedImages.sort((a, b) => new Date(b.date) - new Date(a.date));
+                    break;
+                case 'oldest':
+                    sortedImages.sort((a, b) => new Date(a.date) - new Date(b.date));
+                    break;
+                // Para 'random', mantém a ordem original
+                default:
+                    break;
+            }
+
+            renderApodImages(sortedImages);
         }
 
         // Função para redefinir o filtro e exibir todas as imagens
