--- a/index.html
+++ b/index.html
@@ -46,46 +46,46 @@
             </div>
             <hr />
         </nav>
+          <!---------------------Random apod para o header--------->
         <div id="headerimg"></div>
     </header>
+
     <main>
+        <!----------------------Imagem do dia----------------------->
         <div id="APOD">
-            <div id="size"></div>
             <h2>Image of the day</h2>
-            <!--Imagem do dia-->
             <div id="contentapod"></div>
         </div>
 
+        <!---------------------Last 3 images------------------------->
         <div id="Latest">
             <h2>Latest 3 images</h2>
-            <!--Last 3 images-->
         </div>
 
+        <!---------------------Search date------------------------->
         <div id="Search">
             <h2>Search a date</h2>
             <div id="search-container">
                 <input type="text" id="searchInput" placeholder="YYYY-MM-DD">
                 <button onclick="performSearch()">Pesquisar</button>
             </div>
-            <div id="content3"></div>
+            <div id="displaysearch"></div>
         </div>
 
+
+        <!---------------------Discover apod------------------------->
         <div id="Discover">
             <h2>Discover</h2>
             <div id="discover-filter">
                 <div id="filters">
 
-                    <button id="stars" class="category-btn" value="Stars"
-                        onclick="performSearch2('Stars')">Stars</button>
-                    <button id="galaxy" class="category-btn" value="Galaxies"
-                        onclick="performSearch2('Galaxies')">Galaxies</button>
-                    <button id="nebul" class="category-btn" value="Nebulae"
-                        onclick="performSearch2('Nebulae')">Nebulae</button>
-                    <button id="comet" class="category-btn" value="Comet"
-                        onclick="performSearch2('Comet')">Comet</button>
+                    <button onclick="applyCategoryFilter('Stars')">Stars</button>
+                    <button onclick="applyCategoryFilter('Galaxies')">Galaxies</button>
+                    <button onclick="applyCategoryFilter('Nebulae')">Nebulae</button>
+                    <button onclick="applyCategoryFilter('Comet')">Comet</button>
+                    <button onclick="applyCategoryFilter('Sun')">Sun</button>
 
-
-                    <select class="category" id="categorySelect" onchange="this.form.performSearch2();">
+                    <select class="category" id="categorySelect" onchange="applyCategoryFilter(this.value);">
                         <option value="all">Solar System</option>
                         <option value="Sun">Sun</option>
                         <option value="Mercury">Mercury</option>
@@ -98,41 +98,46 @@
                         <option value="Neptunae">Neptunae</option>
                         <option value="Pluto">PLuto</option>
                     </select>
-                    <!-- <button onclick="performSearch2()">GO</button>-->
 
-                    <select class="category" id="categorySelect2" onchange="this.form.performSearch2();">
+                    <select class="category" id="categorySelect2" onchange="applyCategoryFilter(this.value);">
                         <option value="all">Space Tech</option>
                         <option value="Rockets">Rockets</option>
                         <option value="Spacecraft">Spacecraft</option>
                         <option value="Space Stations">Space Stations</option>
                     </select>
-                    <!-- <button onclick="performSearch2()">GO</button>-->
 
-                    <select class="category" id="categorySelect3" onchange="this.form.performSearch2();">
+                    <select class="category" id="categorySelect3" onchange="applyCategoryFilter(this.value);">
                         <option value="all">People</option>
                         <option value="Scientists">Scientists</option>
                         <option value="Astronauts">Astronauts</option>
                     </select>
-                    <!-- <button onclick="performSearch2()">GO</button>-->
 
+                    <label for="orderBy">Order By:</label>
+                    <select id="orderBy" onchange="applyOrderBy(this.value);">
+                        <option value="random">Random</option>
+                        <option value="latest">Most recent to old</option>
+                        <option value="oldest">Oldest to most recent</option>
+                    </select>
+
+                    <button onclick="resetFilter()">Reset Filter</button>
                 </div>
             </div>
+            <div id="apod-container"></div>
         </div>
 
-        <div id="content3"></div>
+        <!--<div id="content3"></div>
 
         <div id="content4">
 
         </div>
 
         <div id="content5">
-        </div>
+        </div>-->
 
 
 
     </main>
     <script src="script.js"></script>
-    <script src="tudo.js"></script>
 </body>
 
 </html>
