update css dos resultados da pesquisa

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <!---------------------Last 3 images------------------------->
         <div id="Latest">
             <h2>Latest 3 images</h2>
+            <div id="contentLatest3"></div>
         </div>
 
         <!---------------------Search date------------------------->
