--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <title>Homepage</title>
     <link href="styles.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <!--para as fontes-->
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
@@ -53,7 +54,7 @@
     <main>
         <!----------------------Imagem do dia----------------------->
         <div id="APOD">
-            <h2>Image of the day</h2>
+            <h2>IMAGE OF THE DAY</h2>
             <div id="contentapod"></div>
         </div>
 
@@ -70,7 +71,8 @@
                 <input type="text" id="searchInput" placeholder="YYYY-MM-DD">
                 <button onclick="performSearch()">Pesquisar</button>
             </div>
-            <div id="displaysearch"></div>
+            <div id="center">
+            <div id="displaysearch"></div></div>
         </div>
 
 
