menu hamburguer hihi

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <header>
 
-        <nav>
+       <!-- <nav>
             <div class="logo2">
                 <img class="logo" src="conteudo/NasaDiscovery.svg" alt="logo website">
             </div>
@@ -46,7 +46,40 @@
                 </ul>
             </div>
             <hr />
+        </nav>-->
+        <nav>
+            <div class="logo2">
+                <img class="logo" src="conteudo/NasaDiscovery.svg" alt="logo website">
+            </div>
+        
+            <div class="menu">
+                <div class="menu-toggle" id="menuToggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+        
+                <ul class="menulist">
+                    <li>
+                        <a href="#APOD">
+                            <h4>Image of the day</h4>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Search">
+                            <h4>Search</h4>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#Discover">
+                            <h4>Discover</h4>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <hr />
         </nav>
+
           <!---------------------Random apod para o header--------->
         <div id="headerimg"></div>
     </header>
@@ -59,10 +92,10 @@
         </div>
 
         <!---------------------Last 3 images------------------------->
-        <div id="Latest">
+      <!--  <div id="Latest">
             <h2>Latest 3 images</h2>
             <div id="contentLatest3"></div>
-        </div>
+        </div>-->
 
         <!---------------------Search date------------------------->
         <div id="Search">
