--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             <option value="oldest">Oldest to most recent</option>
                         </select>
                     </div>
-                    <button onclick="resetFilter()">Clean</button>
+                    <button id="Clean" onclick="resetFilter()">Clean</button>
                 </div>
             </div>
             <div id="apod-container"></div>
