--- a/index.html
+++ b/index.html
@@ -7,46 +7,13 @@
     <link href="styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <!--para as fontes-->
     <link href='https://fonts.googleapis.com/css?family=Manrope' rel='stylesheet'>
-    <!--  <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Secular+One&display=swap"
-          rel="stylesheet">-->
+  
 </head>
 
 <body>
     <header>
-
-        <!-- <nav>
-            <div class="logo2">
-                <img class="logo" src="conteudo/NasaDiscovery.svg" alt="logo website">
-            </div>
-            <div class="menu">
-                <ul class="menulist">
-                    <li>
-                        <a href="#APOD">
-                            <h4>Image of the day</h4>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Latest">
-                            <h4>Latest 3</h4>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#Search">
-                            <h4>Search</h4>
-                        </a>
-                    </li>
-                    <li><a href="#Discover">
-                            <h4>Discover</h4>
-                        </a></li>
-                </ul>
-            </div>
-            <hr />
-        </nav>-->
         <nav>
             <div class="logo2">
                 <img class="logo" src="conteudo/NasaDiscovery.svg" alt="logo website">
@@ -54,9 +21,9 @@
 
             <div class="menu">
                 <div class="menu-toggle" id="menuToggle">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                    <span class="cor-span"></span>
+                    <span class="cor-span"></span>
+                    <span class="cor-span"></span>
                 </div>
 
                 <ul class="menulist">
